--- a/cropapp/templates/user/signup.html
+++ b/cropapp/templates/user/signup.html
@@ -21,7 +21,7 @@
                             
                             <h2>Create Account</h2>
                             <div class="text-box-cont">
-                                <form action="/farmers/signup/" method="post" enctype="multipart/form-data">
+                                <form method="post" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     {% if msg %}
                                     <span style="color: red;">{{ msg }}</span>
@@ -53,7 +53,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
                                     </div>
-                                    <input type="password" class="form-control" placeholder="Password" name="password" aria-describedby="basic-addon1" required>
+                                    <input type="password" class="form-control" placeholder="Password" name="pass_word" aria-describedby="basic-addon1" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
@@ -69,7 +69,7 @@
                                         <span class="input-group-text" id="basic-addon1">
                                         <i class="fa fa-phone"></i></span>
                                     </div>
-                                    <input type="number" class="form-control" placeholder="phone" name="phone" aria-describedby="basic-addon1" required min="1000000000" max="9999999999" >
+                                    <input type="text" class="form-control" placeholder="phone" name="phone" aria-describedby="basic-addon1" required minlength="10" maxlength="13" >
                                 </div>
                                
                         
