--- a/cropapp/templates/loginsignupbase.html
+++ b/cropapp/templates/loginsignupbase.html
@@ -24,13 +24,13 @@
 
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active"><a href="/publicindex/" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="/publicshop/" class="nav-link">Shop</a></li>
+              <li class="nav-item active"><a href="/index/" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="/publicshop/" class="nav-link">Crops</a></li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="/publicshop/" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+                <a class="nav-link dropdown-toggle" href="/publicshop/" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="/publicabout/">About US</a>
-                  <a class="dropdown-item" href="/farmersdetails/">Our Farmers</a>
+                  <a class="dropdown-item" href="/publicabout/">View Orders</a>
+                  <a class="dropdown-item" href="/farmersdetails/">View Finished Orders</a>
                 </div>
               </li>
               <li class="nav-item"><a href="/publiccontact/" class="nav-link">Contact us</a></li>
