--- a/cropapp/templates/index.html
+++ b/cropapp/templates/index.html
@@ -61,7 +61,7 @@
             </li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact us</a></li>
             
-              <li class="nav-item active"><a href="plogin" class="nav-link">Login</a></li>
+              <li class="nav-item active"><a href="/userlogin" class="nav-link">Login</a></li>
               
 	        </ul>
 	      </div>
@@ -215,14 +215,14 @@
       </div>
     </section>
 
-    <section class="ftco-section img" style="background-image: url(/media/products/pics/1-186.jpg);">
+    <section class="ftco-section img" style="background-image: url(/static/images/category-2.jpg);">
     	<div class="container">
 				<div class="row justify-content-end">
           <div class="col-md-6 heading-section ftco-animate deal-of-the-day ftco-animate" style="    background: rgba(250, 250, 250, 0.8);">
           	<span class="subheading">Best Price For You</span>
             <h2 class="mb-4">Deal of the day</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-            <h3><a href="#">Onion</a></h3>
+            <h3><a href="#">Strawberry</a></h3>
             <span class="price"><strike> ₹30 </strike> <a href="#"> now ₹25 only</a></span>
             <div id="timer" class="d-flex mt-5">
 						  <div class="time" id="days"></div>
