--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -41,7 +41,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="/adminhome" class="nav-link">Home</a></li>
+	          <li class="nav-item active"><a href="/userhome" class="nav-link">User Home</a></li>
 
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="Orders" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Orders</a>
@@ -53,14 +53,27 @@
 
             </li>
 
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="analysis" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Analysis</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+              	<a class="dropdown-item" href="/soiltest">Soil Test</a>
+
+              	<a class="dropdown-item" href="/weathertest">Weather Test</a>
+              </div>
+
+            </li>
+
 	          <li class="nav-item"><a href="/managecrops" class="nav-link">Crops</a></li>
-            <li class="nav-item"><a href="/view_user" class="nav-link">View Users</a></li>
             <li class="nav-item"><a href="/msg" class="nav-link">Messages</a></li>
-            <li class="nav-item"><a href="/updateadminpass" class="nav-link">Update Password</a></li>
-            <li class="nav-item"><a href="/adminlogout" class="nav-link">Log Out</a></li>
-
-
-
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hey ,{{ user.uname}}!</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="orderhistory">Order History</a>
+                <a class="dropdown-item" href="changeaddress">Change Address</a>
+                <a class="dropdown-item" href="/updateuserpass">Change Password</a>
+                <a class="dropdown-item" href="/logout">LogOut</a>
+              </div>
+            </li>
 	        </ul>
 	      </div>
 	    </div>
