--- a/cropapp/templates/index.html
+++ b/cropapp/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 <html lang="en">
   <head>
-    <title>Farmer's E Market</title>
+    <title>Krishiworld</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -35,7 +35,7 @@
 		
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="/index">Farmer's E Market</a>
+	      <a class="navbar-brand" href="/index">Krishi world</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -51,14 +51,8 @@
                 
               </div>
             </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="shop" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-                <a class="dropdown-item" href="/about">About US</a>
-                <a class="dropdown-item" href="/ourfarmers">Our Farmers</a>
-              </div>
-            </li>
+	          
+            <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="/contact" class="nav-link">Contact us</a></li>
             
               <li class="nav-item active"><a href="/userlogin" class="nav-link">Login</a></li>
@@ -70,38 +64,38 @@
     <!-- END nav -->
     
 <section id="home-section" class="hero">
-		  <div class="home-slider owl-carousel">
-	      <div class="slider-item" style="background-image: url({% static 'images/bg_1.jpg' %});">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-	            <div class="col-md-12 ftco-animate text-center">
-	              <h1 class="mb-2">We serve Fresh Vegestables &amp; Fruits</h1>
-	              <h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-	              <p><a href="shop" class="btn btn-primary">Shop now</a></p>
-	            </div>
-
-	          </div>
-	        </div>
-	      </div>
-
-	      <div class="slider-item" style="background-image: url({% static 'images/bg_2.jpg' %});">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-	            <div class="col-sm-12 ftco-animate text-center">
-	              <h1 class="mb-2">100% Fresh &amp; Organic Foods</h1>
-	              <h2 class="subheading mb-4">We deliver organic vegetables &amp; fruits</h2>
-	              <p><a href="shop" class="btn btn-primary">Shop now</a></p>
-	            </div>
-
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-    </section>
+      <div class="home-slider owl-carousel">
+      <div class="slider-item" style="background-image: url({% static 'images/bg_n1.jpg' %});">
+          <div class="overlay"></div>
+        <div class="container">
+          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+  
+            <div class="col-md-12 ftco-animate text-center">
+              <h1 class="mb-2">We are here to help you in Farming </h1>
+              <h2 class="subheading mb-4">We can develop organic vegetables &amp; fruits</h2>
+              <p><a href="shop" class="btn btn-primary">Shop now</a></p>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+  
+      <div class="slider-item" style="background-image: url({% static 'images/bg_n2.jpg' %});">
+          <div class="overlay"></div>
+        <div class="container">
+          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+  
+            <div class="col-sm-12 ftco-animate text-center">
+              <h1 class="mb-2">Let's Farm Together for you &amp; Nation</h1>
+              <h2 class="subheading mb-4">We can develop organic vegetables &amp; fruits</h2>
+              <p><a href="shop" class="btn btn-primary">Shop now</a></p>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
@@ -338,7 +332,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Farmer's E Market</h2>
+              <h2 class="ftco-heading-2">Krishi World</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -353,11 +347,10 @@
               <ul class="list-unstyled">
                 <li><a href="shop" class="py-2 d-block">Shop</a></li>
                 
-                <li><a href="/farmers/login" class="py-2 d-block">Farmer's Section</a></li>
+                <li><a href="/userlogin" class="py-2 d-block">Farmer's Section</a></li>
                 
-                <li><a href="about" class="py-2 d-block">About US</a></li>
-                <li><a href="ourfarmers" class="py-2 d-block">Our Farmers</a></li>
-                <li><a href="contact" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="/about" class="py-2 d-block">About US</a></li>
+                <li><a href="/contact" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
