--- a/cropapp/templates/login.html
+++ b/cropapp/templates/login.html
@@ -9,7 +9,7 @@
             <div class="small-logo">
                 <i class="fab fa-asymmetrik"></i> Account Login
             </div>
-            <h2>Sign in to Farmer's E Market</h2>
+            <h2>Sign in to Krishi World</h2>
             <div class="row">
                 <ul>
                     <li><i class="fab fa-facebook-f"></i></li>
@@ -63,7 +63,7 @@
 
 
         </div>
-        <div class="col-lg-4 col-md-5 box-de" style="background-image: url({% static '/images/bg_2.jpg' %});">
+        <div class="col-lg-4 col-md-5 box-de" style="background-image: url({% static '/images/2.jpg' %});">
             <div class="ditk-inf">
                 <h2 class="w-100">Didn't Have an Account </h2>
                 <p>Simply Create your account by clicking the Signup Button</p>
