--- a/cropapp/templates/loginsignupbase.html
+++ b/cropapp/templates/loginsignupbase.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Farmer's E Market</title>
+    <title>Krishiworld</title>
 
     <link rel="shortcut icon" href="{% static '/loginsignup/images/fav.jpg' %}">
     <link rel="stylesheet" href="{% static '/loginsignup/css/bootstrap.min.css' %}">
@@ -17,7 +17,7 @@
     <div class="container-fluid ">
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-          <a class="navbar-brand" href="/publicindex/">Farmer's E Market</a>
+          <a class="navbar-brand" href="/publicindex/">Krishi World</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
           </button>
