--- a/cropapp/templates/user/signup.html
+++ b/cropapp/templates/user/signup.html
@@ -5,9 +5,9 @@
                 
                 <div class="col-sm-10 login-box">
                     <div class="row">
-                       <div class="col-lg-4 col-md-5 box-de" style="background-image: url({% static '/images/bg_2.jpg' %});">
+                       <div class="col-lg-4 col-md-5 box-de" style="background-image: url({% static '/images/2.jpg' %});">
                            <div class="small-logo">
-                                <i class="fab fa-asymmetrik"></i> Farmer's Sign up
+                                <i class="fab fa-asymmetrik"></i> Krishi World Sign up
                             </div>
                             <div class="ditk-inf sup-oi">
                                 <h2 class="w-100">Already Have an Account </h2>
