--- a/cropapp/templates/admin/userdetails.html
+++ b/cropapp/templates/admin/userdetails.html
@@ -1,7 +1,7 @@
 {% extends 'admin/adminbasee.html' %}
 {% load static %}
 {% block Content1 %}
-<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_1.jpg' %}');">
+<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n2.jpg' %}');">
     <div class="container">
       <div class="row no-gutters slider-text align-items-center justify-content-center">
         <div class="col-md-9 ftco-animate text-center">
