--- a/cropapp/templates/user/soiiltest.html
+++ b/cropapp/templates/user/soiiltest.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block Content1 %}
 
-<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_1.jpg' %}');">
+<div class="hero-wrap hero-bread" style="background-image: url('{% static '/images/bg_n1.jpg' %}');">
   <div class="container">
     <div class="row no-gutters slider-text align-items-center justify-content-center">
       <div class="col-md-9 ftco-animate text-center">
