--- a/cropapp/templates/user/userbase.html
+++ b/cropapp/templates/user/userbase.html
@@ -52,6 +52,7 @@
               </div>
 
             </li>
+	          <li class="nav-item active"><a href="/manageaccount" class="nav-link"> Manage Account</a></li>
 
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="analysis" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Analysis</a>
