--- a/cropapp/templates/user/userhome.html
+++ b/cropapp/templates/user/userhome.html
@@ -1,8 +1,46 @@
 {% extends 'user/userbase.html' %}
 {% load static %}
 
-
  {% block Content1 %}
+
+ <!-- slider start-->
+
+ <section id="home-section" class="hero">
+    <div class="home-slider owl-carousel">
+    <div class="slider-item" style="background-image: url({% static 'images/bg_n1.jpg' %});">
+        <div class="overlay"></div>
+      <div class="container">
+        <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+  
+          <div class="col-md-12 ftco-animate text-center">
+            <h1 class="mb-2">We are here to help you in Farming </h1>
+            <h2 class="subheading mb-4">We can develop organic vegetables &amp; fruits</h2>
+            <p><a href="shop" class="btn btn-primary">Shop now</a></p>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  
+    <div class="slider-item" style="background-image: url({% static 'images/bg_n2.jpg' %});">
+        <div class="overlay"></div>
+      <div class="container">
+        <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+  
+          <div class="col-sm-12 ftco-animate text-center">
+            <h1 class="mb-2">Let's Farm Together for you &amp; Nation</h1>
+            <h2 class="subheading mb-4">We can develop organic vegetables &amp; fruits</h2>
+            <p><a href="shop" class="btn btn-primary">Shop now</a></p>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+
+ <!-- slider end -->
+ <br>
  <section class="ftco-section">
  <div class="container">
      <div class="row justify-content-center">
@@ -38,64 +76,44 @@
          <div class="tab-pane fade  show active " id="All" role="tabpanel" aria-labelledby="All-tab">
              <div class="row">
 
-
+                
+                {% for pro in cropview %}
                  <div class="col-md-6 col-lg-3 ftco-animate">
                      <div class="product">
                          <a href="#" class="img-prod"><img class="img-fluid"
-                                                           src="{% static 'images/seeds/barley-cover-crop-sm_large.jpg' %}"
-                                                           alt="Colorlib Template">
-                             <span class="status">on offer</span>
+                                                           src="{{pro.img}}"
+                                                           alt="Colorlib Template" style="width: 250px; height: 250px;">
+                             <!-- <span class="status">on offer</span> -->
                              <div class="overlay"></div>
                          </a>
                          <div class="text py-3 pb-4 px-3 text-center">
-                             <h3><a href="#">Onion</a></h3>
+                             <h3><a href="#">{{pro.pname}}</a></h3>
                              <div class="d-flex">
                                  <div class="pricing">
-                                     <p class="price"><span class="mr-2 price-dc">₹30</span><span class="price-sale">₹25</span>
+                                     <p class="price"><span class="price-sale">₹{{pro.price}}</span>
                                      </p>
                                  </div>
                              </div>
                              <div class="bottom-area d-flex px-3">
                                  <div class="m-auto d-flex">
-                                     <a href="/product?id=1"
-                                        class="product-details d-flex justify-content-center align-items-center text-center">
-                                         <span><i class="ion-ios-menu"></i></span>
-                                     </a>
+                                     <form action ="/productview/" method="POST">
+                                    {% csrf_token %}
+                                    <input type="number" value="{{pro.pid}}" name="proid" hidden>
+                                     
+                                        <input type="submit"   class="btn btn-success" value="View">
+                                         <!-- <span><i class="ion-ios-menu"></i></span> -->
+                                     
+                                     </form>
 
                                  </div>
                              </div>
                          </div>
                      </div>
                  </div>
+                 {% endfor %}
 
 
-                 <div class="col-md-6 col-lg-3 ftco-animate">
-                     <div class="product">
-                         <a href="#" class="img-prod"><img class="img-fluid" src="{% static 'images/stock/bg.jpg' %}"
-                                                           alt="Colorlib Template">
-
-                             <div class="overlay"></div>
-                         </a>
-                         <div class="text py-3 pb-4 px-3 text-center">
-                             <h3><a href="#">Apple</a></h3>
-                             <div class="d-flex">
-                                 <div class="pricing">
-                                     <p class="price"><span class="price-sale">₹100</span></p>
-                                 </div>
-                             </div>
-                             <div class="bottom-area d-flex px-3">
-                                 <div class="m-auto d-flex">
-                                     <a href="/product?id=2"
-                                        class="product-details d-flex justify-content-center align-items-center text-center">
-                                         <span><i class="ion-ios-menu"></i></span>
-                                     </a>
-
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-
+                 
 
                  <div class="col-md-6 col-lg-3 ftco-animate">
                      <div class="product">
